[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Scripts/UIScripts/MenuHandler.gd" type="Script" id=2]
[ext_resource path="res://Assets/Fonts/Hhenum/Hhenum-Regular.otf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Fonts/Hhenum/MainFont.tres" type="DynamicFont" id=4]

[sub_resource type="DynamicFont" id=1]
size = 120
font_data = ExtResource( 3 )

[node name="Menu" type="MarginContainer"]
anchor_bottom = 1.0
margin_right = 541.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 40
custom_constants/margin_top = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="VBoxContainer" parent="."]
margin_left = 40.0
margin_top = 40.0
margin_right = 501.0
margin_bottom = 1040.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="MainMenu"]
margin_right = 461.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 1 )
text = "    Title    "
align = 1

[node name="SandboxButton" type="Button" parent="MainMenu"]
margin_top = 124.0
margin_right = 461.0
margin_bottom = 170.0
custom_fonts/font = ExtResource( 4 )
text = "Sandbox"

[node name="DesignerButton" type="Button" parent="MainMenu"]
margin_top = 174.0
margin_right = 461.0
margin_bottom = 220.0
custom_fonts/font = ExtResource( 4 )
text = "Designer"

[node name="OptionButton" type="Button" parent="MainMenu"]
margin_top = 224.0
margin_right = 461.0
margin_bottom = 270.0
custom_fonts/font = ExtResource( 4 )
text = "Options"

[node name="ExitButton" type="Button" parent="MainMenu"]
margin_top = 274.0
margin_right = 461.0
margin_bottom = 320.0
custom_fonts/font = ExtResource( 4 )
text = "Exit Game"

[connection signal="pressed" from="MainMenu/SandboxButton" to="." method="_on_SandboxButton_pressed"]
[connection signal="pressed" from="MainMenu/DesignerButton" to="." method="_on_DesignerButton_pressed"]
[connection signal="pressed" from="MainMenu/OptionButton" to="." method="_on_OptionButton_pressed"]
[connection signal="pressed" from="MainMenu/ExitButton" to="." method="_on_ExitButton_pressed"]
